# packed-display-buffer

./: Cargo.toml  README.md
benches/: contiguous.rs  fill.rs  mask.rs
examples/: debug.rs.disabled
src/: active_area.rs  block_iterator.rs  byte_direction.rs  lib.rs  mask.rs  pixels.rs
