[package]
name = "packed-display-buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics-core = "0.3.3"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.5"

[[bench]]
name = "fill"
harness = false
